--- a/simple_identification/facerecognition.ipynb
+++ b/simple_identification/facerecognition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5010ef70",
    "metadata": {},
    "outputs": [],
@@ -14,6 +14,17 @@
     "#!pip install -U insightface\n",
     "#!pip install onnxruntime\n",
     "from insightface.app import FaceAnalysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "864afe6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#download from\n",
+    "#!wget https://www.dropbox.com/scl/fi/b9y03enpi01zfb36ckyir/personas.zip?rlkey=19wypqmaps5b5n28bz3gi7xg7&st=r52y68rh&dl=0 -O persona.zip"
    ]
   },
   {
@@ -52,10 +63,8 @@
     "    \"\"\"Extract face embedding from an image\"\"\"\n",
     "    img = PIL.Image.open(image_path)\n",
     "    if img is None:\n",
-    "        raise ValueError(f\"Could not read image: {image_path}\")\n",
-    "    \n",
-    "    faces = app.get(np.array(img))\n",
-    "    print(faces)\n",
+    "        raise ValueError(f\"Could not read image: {image_path}\")    \n",
+    "    faces = app.get(np.array(img))    \n",
     "    if len(faces) < 1:\n",
     "        raise ValueError(\"No faces detected in the image\")\n",
     "    if len(faces) > 1:\n",
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "76abb174",
    "metadata": {},
    "outputs": [
@@ -84,19 +93,30 @@
       "/home/data/personas/pancho/pancho.jpeg\n",
       "/home/data/personas/pancho/pancho2.jpeg\n",
       "/home/data/personas/thalia/thalia1.jpg\n",
-      "/home/data/personas/thalia/thalia2.jpg\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'face_embs.npy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 19\u001b[0m\n\u001b[1;32m     15\u001b[0m                 embs \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mvstack([embs, emb])\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# print(embs.shape)\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# np.save(\"face_embs.npy\", embs)\u001b[39;00m\n\u001b[0;32m---> 19\u001b[0m embs \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mface_embs.npy\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m#similarity search\u001b[39;00m\n\u001b[1;32m     21\u001b[0m embs_norm \u001b[38;5;241m=\u001b[39m embs \u001b[38;5;241m/\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mnorm(embs, \u001b[38;5;28mord\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m, axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m,  keepdims \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "File \u001b[0;32m~/anaconda3/envs/ml/lib/python3.9/site-packages/numpy/lib/_npyio_impl.py:455\u001b[0m, in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[1;32m    453\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    454\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 455\u001b[0m     fid \u001b[38;5;241m=\u001b[39m stack\u001b[38;5;241m.\u001b[39menter_context(\u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfspath\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    456\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    458\u001b[0m \u001b[38;5;66;03m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'face_embs.npy'"
+      "/home/data/personas/thalia/thalia2.jpg\n",
+      "(11, 512)\n",
+      "[[ 0  1  2  3 10  7  8  9  5  4  6]\n",
+      " [ 1  0  2  7  3  8  9 10  6  5  4]\n",
+      " [ 2  3  1  0  6  4  5  7  8  9 10]\n",
+      " [ 3  2  6  4  0  1  5  7  8 10  9]\n",
+      " [ 4  6  5  3  2  7  9 10  8  0  1]\n",
+      " [ 5  6  4  2  3  9 10  7  8  0  1]\n",
+      " [ 6  5  4  3  2  9 10  7  1  0  8]\n",
+      " [ 7  8  1  0  4  2  3  9  6  5 10]\n",
+      " [ 8  7  1  0  4  9 10  5  2  3  6]\n",
+      " [ 9 10  4  6  5  1  8  7  0  2  3]\n",
+      " [10  9  0  4  6  5  1  8  7  2  3]]\n",
+      "[('paulina', np.float32(1.0000001)), ('paulina', np.float32(0.6209116)), ('dicaprio', np.float32(0.14419979)), ('dicaprio', np.float32(0.11881716)), ('thalia', np.float32(0.11417775))]\n",
+      "[('paulina', np.float32(0.99999994)), ('paulina', np.float32(0.6209116)), ('dicaprio', np.float32(0.15393439)), ('pancho', np.float32(0.119544916)), ('dicaprio', np.float32(0.09273541))]\n",
+      "[('dicaprio', np.float32(1.0000002)), ('dicaprio', np.float32(0.82802194)), ('paulina', np.float32(0.15393439)), ('paulina', np.float32(0.14419979)), ('barack', np.float32(0.10194066))]\n",
+      "[('dicaprio', np.float32(1.0)), ('dicaprio', np.float32(0.82802194)), ('barack', np.float32(0.13073248)), ('barack', np.float32(0.12986913)), ('paulina', np.float32(0.11881716))]\n",
+      "[('barack', np.float32(1.0000001)), ('barack', np.float32(0.70025635)), ('barack', np.float32(0.6984561)), ('dicaprio', np.float32(0.12986913)), ('dicaprio', np.float32(0.08730675))]\n",
+      "[('barack', np.float32(1.0)), ('barack', np.float32(0.7008226)), ('barack', np.float32(0.6984561)), ('dicaprio', np.float32(0.06230258)), ('dicaprio', np.float32(0.03969179))]\n",
+      "[('barack', np.float32(0.9999996)), ('barack', np.float32(0.7008226)), ('barack', np.float32(0.70025635)), ('dicaprio', np.float32(0.13073248)), ('dicaprio', np.float32(0.10194066))]\n",
+      "[('pancho', np.float32(1.0)), ('pancho', np.float32(0.6165867)), ('paulina', np.float32(0.119544916)), ('paulina', np.float32(0.10602467)), ('barack', np.float32(0.072126225))]\n",
+      "[('pancho', np.float32(1.0)), ('pancho', np.float32(0.6165867)), ('paulina', np.float32(0.07169363)), ('paulina', np.float32(0.06048686)), ('barack', np.float32(0.025947599))]\n",
+      "[('thalia', np.float32(1.0000001)), ('thalia', np.float32(0.6660255)), ('barack', np.float32(0.06861607)), ('barack', np.float32(0.055006396)), ('barack', np.float32(0.035090018))]\n",
+      "[('thalia', np.float32(1.0)), ('thalia', np.float32(0.6660255)), ('paulina', np.float32(0.11417775)), ('barack', np.float32(0.05696486)), ('barack', np.float32(0.040141404))]\n"
      ]
     }
    ],
