--- a/simple_identification/facerecognition.ipynb
+++ b/simple_identification/facerecognition.ipynb
@@ -2,14 +2,16 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "5010ef70",
       "metadata": {
         "id": "5010ef70"
       },
       "outputs": [],
       "source": [
+        "#importamos módulos básicos\n",
         "import os\n",
+        "# PIL de pillow es un buen módulo para procesar imágenes\n",
         "import PIL\n",
         "import PIL.Image\n",
         "import numpy as np"
@@ -18,6 +20,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# instalamos módulos para procesar rostros\n",
         "!pip install -U insightface\n",
         "!pip install onnxruntime\n",
         "from insightface.app import FaceAnalysis"
@@ -30,7 +33,7 @@
         "outputId": "66860cb3-bac7-444f-be65-152eccb47f27"
       },
       "id": "xRIoWjUzlVX4",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "864afe6f",
       "metadata": {
         "colab": {
@@ -133,14 +136,15 @@
         }
       ],
       "source": [
-        "#download from\n",
-        "!wget \"https://www.dropbox.com/scl/fi/b9y03enpi01zfb36ckyir/personas.zip?rlkey=19wypqmaps5b5n28bz3gi7xg7&st=r52y68rh&dl=0\" -O personas.zip"
+        "# descargar un pequeño dataset de prueba\n",
+        "\n",
+        "!wget \"https://www.dropbox.com/scl/fi/b9y03enpi01zfb36ckyir/personas.zip?rlkey=19wypqmaps5b5n28bz3gi7xg7&st=s6p3564g&dl=0\" -O personas.zip"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "!unzip persona.zip"
+        "!unzip personas.zip"
       ],
       "metadata": {
         "colab": {
@@ -150,7 +154,7 @@
         "outputId": "848acf81-7792-4eec-a6cd-8346f62fd533"
       },
       "id": "7H_BhHsRmkjj",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "d4de11e6",
       "metadata": {
         "colab": {
@@ -243,7 +247,7 @@
         }
       },
       "id": "qAvj_YtWpeAi",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "76abb174",
       "metadata": {
         "colab": {
@@ -457,7 +461,7 @@
         }
       },
       "id": "fVH2qqPpvJFQ",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -614,7 +618,7 @@
         }
       },
       "id": "3ycGg_QAt1eQ",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -660,7 +664,7 @@
         }
       },
       "id": "bVaGH0eLxc6s",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -698,7 +702,7 @@
         }
       },
       "id": "vC3RMVA8y_CJ",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
