actualizado con 7 identidades

--- a/simple_identification/facerecognition.ipynb
+++ b/simple_identification/facerecognition.ipynb
@@ -301,7 +301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 31,
       "id": "76abb174",
       "metadata": {
         "id": "76abb174"
@@ -331,7 +331,7 @@
         "id": "_nnhr4izBSZv"
       },
       "id": "_nnhr4izBSZv",
-      "execution_count": 25,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -341,13 +341,13 @@
       ],
       "metadata": {
         "id": "fVH2qqPpvJFQ",
-        "outputId": "f37ec9a2-745e-4271-c404-345f1cb35f4d",
+        "outputId": "b1f963fa-e549-46da-c370-c95d0887afcf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "fVH2qqPpvJFQ",
-      "execution_count": 26,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -361,72 +361,85 @@
     {
       "cell_type": "code",
       "source": [
-        "#np.save(\"face_embs.npy\", embs)\n",
-        "# embs = np.load(\"face_embs.npy\")\n",
-        "#similarity search\n",
+        "# similarity search -- simplmente aplicamos producto punto todos contra todos\n",
         "embs_norm = embs / np.linalg.norm(embs, ord = 2, axis = 1,  keepdims = True)\n",
         "sim = embs_norm @ np.transpose(embs_norm)\n",
         "print(sim)\n"
       ],
       "metadata": {
         "id": "3ycGg_QAt1eQ",
-        "outputId": "3bb6a9f6-ba93-49f1-ba4c-903bbbef6a21",
+        "outputId": "a2e8bf05-2cd0-4321-dd9e-823745be0e6d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "3ycGg_QAt1eQ",
-      "execution_count": 27,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999]\n",
-            " [0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999]\n",
-            " [0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999]\n",
-            " [0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999]\n",
-            " [0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999]\n",
-            " [0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999]\n",
-            " [0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999]\n",
-            " [0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999]\n",
-            " [0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999]\n",
-            " [0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999]\n",
-            " [0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999]\n",
-            " [0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999]\n",
-            " [0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999]\n",
-            " [0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999]\n",
-            " [0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999 0.9999999\n",
-            "  0.9999999]]\n"
+            "[[ 1.0000000e+00  6.2091148e-01  1.4419974e-01  1.1881724e-01\n",
+            "  -4.3928705e-02 -4.2916708e-02 -4.6245165e-02  1.0602462e-01\n",
+            "   6.0486905e-02 -9.2999907e-03  1.1417773e-01  4.8244365e-02\n",
+            "   1.9483801e-02  1.1305122e-01  1.2899187e-01]\n",
+            " [ 6.2091148e-01  1.0000000e+00  1.5393433e-01  9.2735447e-02\n",
+            "  -8.4229112e-02 -4.6397049e-02 -1.9339167e-02  1.1954491e-01\n",
+            "   7.1693614e-02  2.9089380e-02  1.3622121e-02  2.8045475e-04\n",
+            "  -1.1759914e-02  3.0222097e-03 -4.5506060e-03]\n",
+            " [ 1.4419974e-01  1.5393433e-01  1.0000001e+00  8.2802188e-01\n",
+            "   8.7306745e-02  6.2302578e-02  1.0194063e-01  1.7433237e-02\n",
+            "  -4.6713978e-02 -5.9806012e-02 -7.4942425e-02  4.4832777e-02\n",
+            "   1.9818639e-02  1.1826560e-01  1.4005813e-01]\n",
+            " [ 1.1881724e-01  9.2735447e-02  8.2802188e-01  1.0000000e+00\n",
+            "   1.2986918e-01  3.9691798e-02  1.3073254e-01  1.6856942e-02\n",
+            "  -5.3042419e-02 -8.2204491e-02 -7.5398922e-02  3.7840158e-02\n",
+            "   6.8672374e-04  3.6277410e-02  6.2857181e-02]\n",
+            " [-4.3928705e-02 -8.4229112e-02  8.7306745e-02  1.2986918e-01\n",
+            "   1.0000004e+00  6.9845605e-01  7.0025647e-01  7.2126254e-02\n",
+            "   2.5947656e-02  6.8616010e-02  5.6964807e-02  1.3853154e-02\n",
+            "   2.5742184e-03 -3.6337536e-02 -4.5242578e-02]\n",
+            " [-4.2916708e-02 -4.6397049e-02  6.2302578e-02  3.9691798e-02\n",
+            "   6.9845605e-01  1.0000000e+00  7.0082259e-01 -9.2418697e-03\n",
+            "  -4.1496724e-02  3.5090063e-02  2.1875104e-02 -4.9792416e-04\n",
+            "  -2.2686809e-02  3.6191396e-02  4.4657357e-02]\n",
+            " [-4.6245165e-02 -1.9339167e-02  1.0194063e-01  1.3073254e-01\n",
+            "   7.0025647e-01  7.0082259e-01  9.9999970e-01 -8.9946333e-03\n",
+            "  -5.6045618e-02  5.5006433e-02  4.0141501e-02  4.2643748e-02\n",
+            "   3.4598880e-02  7.0497714e-02  3.1981129e-02]\n",
+            " [ 1.0602462e-01  1.1954491e-01  1.7433237e-02  1.6856942e-02\n",
+            "   7.2126254e-02 -9.2418697e-03 -8.9946333e-03  9.9999982e-01\n",
+            "   6.1658680e-01 -2.9283497e-03 -7.1869805e-02 -1.4723601e-02\n",
+            "  -9.5245242e-02  1.8306985e-02 -6.3665703e-02]\n",
+            " [ 6.0486905e-02  7.1693614e-02 -4.6713978e-02 -5.3042419e-02\n",
+            "   2.5947656e-02 -4.1496724e-02 -5.6045618e-02  6.1658680e-01\n",
+            "   1.0000000e+00  3.5463385e-03 -1.6800009e-02 -3.0963620e-02\n",
+            "  -1.2737846e-01 -2.9056605e-02 -1.4083495e-02]\n",
+            " [-9.2999907e-03  2.9089380e-02 -5.9806012e-02 -8.2204491e-02\n",
+            "   6.8616010e-02  3.5090063e-02  5.5006433e-02 -2.9283497e-03\n",
+            "   3.5463385e-03  9.9999988e-01  6.6602534e-01 -3.5276547e-02\n",
+            "  -3.6961790e-02  8.9212030e-02  1.3882148e-01]\n",
+            " [ 1.1417773e-01  1.3622121e-02 -7.4942425e-02 -7.5398922e-02\n",
+            "   5.6964807e-02  2.1875104e-02  4.0141501e-02 -7.1869805e-02\n",
+            "  -1.6800009e-02  6.6602534e-01  9.9999976e-01 -2.0995595e-02\n",
+            "  -7.1189784e-02  3.8212083e-02  9.4188482e-02]\n",
+            " [ 4.8244365e-02  2.8045475e-04  4.4832777e-02  3.7840158e-02\n",
+            "   1.3853154e-02 -4.9792416e-04  4.2643748e-02 -1.4723601e-02\n",
+            "  -3.0963620e-02 -3.5276547e-02 -2.0995595e-02  9.9999976e-01\n",
+            "   7.6309067e-01 -1.4981819e-02 -9.9204168e-02]\n",
+            " [ 1.9483801e-02 -1.1759914e-02  1.9818639e-02  6.8672374e-04\n",
+            "   2.5742184e-03 -2.2686809e-02  3.4598880e-02 -9.5245242e-02\n",
+            "  -1.2737846e-01 -3.6961790e-02 -7.1189784e-02  7.6309067e-01\n",
+            "   9.9999976e-01 -5.6274895e-02 -9.9413559e-02]\n",
+            " [ 1.1305122e-01  3.0222097e-03  1.1826560e-01  3.6277410e-02\n",
+            "  -3.6337536e-02  3.6191396e-02  7.0497714e-02  1.8306985e-02\n",
+            "  -2.9056605e-02  8.9212030e-02  3.8212083e-02 -1.4981819e-02\n",
+            "  -5.6274895e-02  9.9999970e-01  6.6047931e-01]\n",
+            " [ 1.2899187e-01 -4.5506060e-03  1.4005813e-01  6.2857181e-02\n",
+            "  -4.5242578e-02  4.4657357e-02  3.1981129e-02 -6.3665703e-02\n",
+            "  -1.4083495e-02  1.3882148e-01  9.4188482e-02 -9.9204168e-02\n",
+            "  -9.9413559e-02  6.6047931e-01  9.9999988e-01]]\n"
           ]
         }
       ]
@@ -434,38 +447,39 @@
     {
       "cell_type": "code",
       "source": [
+        "# ordenamos por fila, de mayor a  menor similitud\n",
         "idx_sort =  np.argsort(-sim, axis = 1)\n",
         "print(idx_sort)\n"
       ],
       "metadata": {
         "id": "bVaGH0eLxc6s",
-        "outputId": "dd04eb21-5ed2-4ebf-f041-f5c0b3eb56f6",
+        "outputId": "03d17abd-e3b5-4430-a2bd-a729f235d76b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "bVaGH0eLxc6s",
-      "execution_count": 28,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
-            " [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
-            " [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
-            " [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
-            " [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
-            " [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
-            " [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
-            " [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
-            " [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
-            " [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
-            " [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
-            " [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
-            " [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
-            " [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
-            " [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]]\n"
+            "[[ 0  1  2 14  3 10 13  7  8 11 12  9  5  4  6]\n",
+            " [ 1  0  2  7  3  8  9 10 13 11 14 12  6  5  4]\n",
+            " [ 2  3  1  0 14 13  6  4  5 11 12  7  8  9 10]\n",
+            " [ 3  2  6  4  0  1 14  5 11 13  7 12  8 10  9]\n",
+            " [ 4  6  5  3  2  7  9 10  8 11 12 13  0 14  1]\n",
+            " [ 5  6  4  2 14  3 13  9 10 11  7 12  8  0  1]\n",
+            " [ 6  5  4  3  2 13  9 11 10 12 14  7  1  0  8]\n",
+            " [ 7  8  1  0  4 13  2  3  9  6  5 11 14 10 12]\n",
+            " [ 8  7  1  0  4  9 14 10 13 11  5  2  3  6 12]\n",
+            " [ 9 10 14 13  4  6  5  1  8  7  0 11 12  2  3]\n",
+            " [10  9  0 14  4  6 13  5  1  8 11 12  7  2  3]\n",
+            " [11 12  0  2  6  3  4  1  5  7 13 10  8  9 14]\n",
+            " [12 11  6  2  0  4  3  1  5  9 13 10  7 14  8]\n",
+            " [13 14  2  0  9  6 10  3  5  7  1 11  8  4 12]\n",
+            " [14 13  2  9  0 10  3  5  6  1  8  4  7 11 12]]\n"
           ]
         }
       ]
@@ -473,32 +487,57 @@
     {
       "cell_type": "code",
       "source": [
+        "# mostramos los nombres de los más similares para cada imagen\n",
         "for  idx, row in enumerate(idx_sort) :\n",
-        "    name_query = names[idx]\n",
+        "    name_query = fdata[idx]['name']\n",
         "    print('Query Name = {}'.format(name_query))\n",
-        "    result = [(names[i], sim[idx, i]) for i in row[1:5] ]\n",
+        "    result = [(fdata[i]['name'], sim[idx, i]) for i in row[1:5] ]\n",
         "    print(result)\n"
       ],
       "metadata": {
         "id": "vC3RMVA8y_CJ",
-        "outputId": "23c51635-7417-4985-d657-293cb4fd50a8",
+        "outputId": "f8c1470a-5642-4897-b821-df508de6339d",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 220
+          "base_uri": "https://localhost:8080/"
         }
       },
       "id": "vC3RMVA8y_CJ",
-      "execution_count": 29,
+      "execution_count": 39,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "list index out of range",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-29-855355108.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m  \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midx_sort\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mname_query\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Query Name = {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname_query\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msim\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Query Name = paulina\n",
+            "[('paulina', np.float32(0.6209115)), ('dicaprio', np.float32(0.14419974)), ('michelle', np.float32(0.12899187)), ('dicaprio', np.float32(0.11881724))]\n",
+            "Query Name = paulina\n",
+            "[('paulina', np.float32(0.6209115)), ('dicaprio', np.float32(0.15393433)), ('pancho', np.float32(0.11954491)), ('dicaprio', np.float32(0.09273545))]\n",
+            "Query Name = dicaprio\n",
+            "[('dicaprio', np.float32(0.8280219)), ('paulina', np.float32(0.15393433)), ('paulina', np.float32(0.14419974)), ('michelle', np.float32(0.14005813))]\n",
+            "Query Name = dicaprio\n",
+            "[('dicaprio', np.float32(0.8280219)), ('barack', np.float32(0.13073254)), ('barack', np.float32(0.12986918)), ('paulina', np.float32(0.11881724))]\n",
+            "Query Name = barack\n",
+            "[('barack', np.float32(0.70025647)), ('barack', np.float32(0.69845605)), ('dicaprio', np.float32(0.12986918)), ('dicaprio', np.float32(0.087306745))]\n",
+            "Query Name = barack\n",
+            "[('barack', np.float32(0.7008226)), ('barack', np.float32(0.69845605)), ('dicaprio', np.float32(0.06230258)), ('michelle', np.float32(0.044657357))]\n",
+            "Query Name = barack\n",
+            "[('barack', np.float32(0.7008226)), ('barack', np.float32(0.70025647)), ('dicaprio', np.float32(0.13073254)), ('dicaprio', np.float32(0.10194063))]\n",
+            "Query Name = pancho\n",
+            "[('pancho', np.float32(0.6165868)), ('paulina', np.float32(0.11954491)), ('paulina', np.float32(0.10602462)), ('barack', np.float32(0.072126254))]\n",
+            "Query Name = pancho\n",
+            "[('pancho', np.float32(0.6165868)), ('paulina', np.float32(0.071693614)), ('paulina', np.float32(0.060486905)), ('barack', np.float32(0.025947656))]\n",
+            "Query Name = thalia\n",
+            "[('thalia', np.float32(0.66602534)), ('michelle', np.float32(0.13882148)), ('michelle', np.float32(0.08921203)), ('barack', np.float32(0.06861601))]\n",
+            "Query Name = thalia\n",
+            "[('thalia', np.float32(0.66602534)), ('paulina', np.float32(0.11417773)), ('michelle', np.float32(0.09418848)), ('barack', np.float32(0.056964807))]\n",
+            "Query Name = mario\n",
+            "[('mario', np.float32(0.76309067)), ('paulina', np.float32(0.048244365)), ('dicaprio', np.float32(0.044832777)), ('barack', np.float32(0.04264375))]\n",
+            "Query Name = mario\n",
+            "[('mario', np.float32(0.76309067)), ('barack', np.float32(0.03459888)), ('dicaprio', np.float32(0.01981864)), ('paulina', np.float32(0.019483801))]\n",
+            "Query Name = michelle\n",
+            "[('michelle', np.float32(0.6604793)), ('dicaprio', np.float32(0.1182656)), ('paulina', np.float32(0.11305122)), ('thalia', np.float32(0.08921203))]\n",
+            "Query Name = michelle\n",
+            "[('michelle', np.float32(0.6604793)), ('dicaprio', np.float32(0.14005813)), ('thalia', np.float32(0.13882148)), ('paulina', np.float32(0.12899187))]\n"
           ]
         }
       ]
